# Proyecto_1_Datos2

LocalServer/: LocalServer.pro  localserver.cpp  localserver.h  widget.cpp  widget.h  widget.ui
Proyecto_1_Datos_2/: CMakeLists.txt  Fondo.qrc  ImgCartas.qrc  Proyecto_1_Datos_2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  servermain.cpp  servermain.h  servidor.cpp  servidor.h
build-LocalServer-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_serverwidget.h  ui_widget.h
build-LocalServer-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/debug/: moc_localserver.cpp  moc_serverwidget.cpp  moc_widget.cpp
build-Proyecto_1_Datos_2-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Proyecto_1_Datos_2-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp  moc_servermain.cpp  qrc_Fondo.cpp
build-Proyecto_1_Datos_2-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Proyecto_1_Datos_2-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  qrc_imagenes.cpp
